Implementado IFicha & Fix